Fix nav overflow: remove negative margin and enable wrap

--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ img {
   display: inline-flex;
   gap: 1.75rem;
   font-size: 1.2rem;
-  margin-right: -15rem;
+  margin-right: 0;
+  flex-wrap: wrap;
 }
 
 .nav a {
@@ -266,7 +267,7 @@ img {
 
 .about-text p {
   margin: 0 0 1rem;
-  line-height: 1.7;
+  line-height: 1.6;
   font-size: 1rem;
   color: #5a4c53;
 }
@@ -278,7 +279,7 @@ img {
 
 
 .about-image {
-  width: 430px;
+  width: 300px;
   max-width: 100%;
   aspect-ratio: 4 / 5;
   border-radius: 1.8rem;
@@ -290,7 +291,7 @@ img {
   left: -70px;
   top: 50%;
   transform: translateY(-50%);
-  width: 500px;
+  width: 400px;
   max-width: 100%;
   height: auto;
   z-index: 1;
@@ -298,7 +299,7 @@ img {
 
 .about-heart {
   position: absolute;
-  left: 250px; /* To the right of the teapot (400px - 70px) */
+  left: 250px; 
   top: 14%; /* Higher than the teapot */
   width: 130px;
   max-width: 100%;
@@ -312,7 +313,7 @@ img {
   right: -70px; /* slightly off screen */
   top: 45%;
   transform: translateY(-50%) rotate(-10deg);
-  width: 320px; /* not too big */
+  width: 200px; 
   max-width: 20%;
   height: auto;
   z-index: 1;
